src/snapshots/rusty__configuration__tests__hardware_printed_fb.snap
---
source: src/configuration.rs
assertion_line: 337
expression: res

---
<Configuration><HardwareConfiguration><name>gFb.a</name><direction>Input</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>gFb.b</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>gFb.c</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>gFb.d</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>gFb.e</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>gFb.f</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>gFb.x</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>gFb.y</name><direction>Output</direction><type>Word</type><address>1</address></HardwareConfiguration><HardwareConfiguration><name>gFb.z</name><direction>Input</direction><type>Word</type><address>12</address></HardwareConfiguration><HardwareConfiguration><name>aFb[0].a</name><direction>Input</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[1].a</name><direction>Input</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[2].a</name><direction>Input</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[0].b</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb[1].b</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb[2].b</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb[0].c</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb[1].c</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb[2].c</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb[0].d</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[1].d</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[2].d</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[0].e</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[1].e</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[2].e</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[0].f</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[1].f</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[2].f</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[0].x</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[1].x</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[2].x</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb[0].y</name><direction>Output</direction><type>Word</type><address>1</address></HardwareConfiguration><HardwareConfiguration><name>aFb[1].y</name><direction>Output</direction><type>Word</type><address>1</address></HardwareConfiguration><HardwareConfiguration><name>aFb[2].y</name><direction>Output</direction><type>Word</type><address>1</address></HardwareConfiguration><HardwareConfiguration><name>aFb[0].z</name><direction>Input</direction><type>Word</type><address>12</address></HardwareConfiguration><HardwareConfiguration><name>aFb[1].z</name><direction>Input</direction><type>Word</type><address>12</address></HardwareConfiguration><HardwareConfiguration><name>aFb[2].z</name><direction>Input</direction><type>Word</type><address>12</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,1].a</name><direction>Input</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,1].a</name><direction>Input</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,1].a</name><direction>Input</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,2].a</name><direction>Input</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,2].a</name><direction>Input</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,2].a</name><direction>Input</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,1].b</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,1].b</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,1].b</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,2].b</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,2].b</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,2].b</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,1].c</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,1].c</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,1].c</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,2].c</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,2].c</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,2].c</name><direction>Output</direction><type>Word</type><address>25</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,1].d</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,1].d</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,1].d</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,2].d</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,2].d</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,2].d</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,1].e</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,1].e</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,1].e</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,2].e</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,2].e</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,2].e</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,1].f</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,1].f</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,1].f</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,2].f</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,2].f</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,2].f</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,1].x</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,1].x</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,1].x</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,2].x</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,2].x</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,2].x</name><direction>Output</direction><type>Template</type><address></address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,1].y</name><direction>Output</direction><type>Word</type><address>1</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,1].y</name><direction>Output</direction><type>Word</type><address>1</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,1].y</name><direction>Output</direction><type>Word</type><address>1</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,2].y</name><direction>Output</direction><type>Word</type><address>1</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,2].y</name><direction>Output</direction><type>Word</type><address>1</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,2].y</name><direction>Output</direction><type>Word</type><address>1</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,1].z</name><direction>Input</direction><type>Word</type><address>12</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,1].z</name><direction>Input</direction><type>Word</type><address>12</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,1].z</name><direction>Input</direction><type>Word</type><address>12</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[0,2].z</name><direction>Input</direction><type>Word</type><address>12</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[1,2].z</name><direction>Input</direction><type>Word</type><address>12</address></HardwareConfiguration><HardwareConfiguration><name>aFb2[2,2].z</name><direction>Input</direction><type>Word</type><address>12</address></HardwareConfiguration>
</Configuration>
